0.223 2023-10-11
  [Test Improvement]
    * Improve tests for IO::Socket::UNIX.
  [Internal Changes]
    * IO::Socket::UNIX#option_names becomes protected method.
  [Document Improvement]
    * Add docs for IO::Socket::UNIX.
0.222 2023-10-10
  [Internal Changes]
    * Remove IO::File#configure method.
  [Bug Fix]
    * Fix a bug that IO::File#new_from_fd returns IO::Handle instead of IO::File.
    * Fix a bug that IO::Socket::UNIX does not work well.
  [Incompatible Changes]
    * Remove IO::Handle#new method and IO::Handle becomes an abstruct class.
    * IO::File#fdopen method becomes a protected method.
    * IO::Socket#listen method becomes a protected method.
    * IO::Socket#bind method becomes a protected method.
    * IO::Socket#connect method becomes a protected method.
    * IO::Socket#socket method becomes a protected method.
0.221 2023-10-10
  [Internal Changes]
    * IO::Handle#set_blocking method always perform a system call.
    * configure method is implemented in IO::File class and it is called from new and new_from_fd method.
    * configure method is called in new method in IO::Socket::IP, IO::Socket::INET, IO::Socket::INET6.
    * Remove configure method from IO::Handle.
    * Remove FieldsInitOnly option from IO::Handle#init method.
    
  [Incompatible Changes]
    * Blocking option ins IO::Socket and its child classes is not allowed. Its blocking mode is always non-blocking mode.
    * IO::Socket is an abstract class, and remove new method.
  [Bug Fix]
    * Fix a bug that IO::Socket and its child classes are not non-blocking mode.
    * Fix a bug that acceptted client is not non-blocking mode.
    
0.220001 2023-10-09
  [Test Fix]
    * Disable server tests for IO::Socket::IP for Windows segfault for now.
0.220 2023-10-09
  [New Features]
    * Add IO#open method.
    * Add IO#opendir method.
  [Test Improvement]
    * Add tests for IO::Socket::IP server features with goroutines.
0.219 2023-06-14
  [Support Changes]