@@ -5,6 +5,15 @@
     * IO::Socket::UNIX#option_names becomes protected method.
   [Document Improvement]
     * Add docs for IO::Socket::UNIX.
+  [Imcompatible Changes]
+    * Changes the beheivior of options in IO::Socket::UNIX.
+    
+      Domain field is always set to AF_UNIX.
+      
+      Type field is set to SOCK_STREAM if Type option is not specified.
+      
+      Proto field is always set to 0.
+    
 0.222 2023-10-10
   [Internal Changes]
     * Remove IO::File#configure method.
